--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -194,3 +194,23 @@
   organization={IEEE},
   corresponding_author = {Jun Yang}
 }
+
+@inproceedings{zweidler2024attempt,
+  title={An attempt to predict feed intake of dairy cows using RGB images},
+  author={Zweidler, Jeffrey and Wang, Meiqing and Li, Sumin and Zandona, Boris and R{\"a}is{\"a}nen, Susanna and Serviento, Aira Maye and Niu, Mutian},
+  booktitle={Precision Livestock Farming 2024: Papers presented at the 11th European Conference on Precision Livestock Farming},
+  pages={746--753},
+  year={2024},
+  organization={Organising Committee of the 11th ECPLF, University of Bologna},
+  corresponding_author = {Mutian Niu}
+}
+
+@inproceedings{wang2024end,
+  title={An end-to-end method for predicting the respiratory rate of dairy cows from RGB videos},
+  author={Wang, Meiqing and Li, Sumin and Peng, Rong and R{\"a}is{\"a}nen, Susanna and Serviento, Aira Maye and Sun, Xiaoge and Wang, Kai and Yu, Fisher and Niu, Mutian},
+  booktitle={Precision Livestock Farming 2024: Papers presented at the 11th European Conference on Precision Livestock Farming},
+  pages={1250--1258},
+  year={2024},
+  organization={Organising Committee of the 11th ECPLF, University of Bologna},
+  orresponding_author = {Mutian Niu}
+}
