add ecplf papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -196,6 +196,7 @@
 }
 
 @inproceedings{zweidler2024attempt,
+  abbr={ECPLF 2024},
   title={An attempt to predict feed intake of dairy cows using RGB images},
   author={Zweidler, Jeffrey and Wang, Meiqing and Li, Sumin and Zandona, Boris and R{\"a}is{\"a}nen, Susanna and Serviento, Aira Maye and Niu, Mutian},
   booktitle={Precision Livestock Farming 2024: Papers presented at the 11th European Conference on Precision Livestock Farming},
@@ -206,6 +207,7 @@
 }
 
 @inproceedings{wang2024end,
+  abbr={ECPLF 2024},
   title={An end-to-end method for predicting the respiratory rate of dairy cows from RGB videos},
   author={Wang, Meiqing and Li, Sumin and Peng, Rong and R{\"a}is{\"a}nen, Susanna and Serviento, Aira Maye and Sun, Xiaoge and Wang, Kai and Yu, Fisher and Niu, Mutian},
   booktitle={Precision Livestock Farming 2024: Papers presented at the 11th European Conference on Precision Livestock Farming},
