add ecplf papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -214,5 +214,16 @@
   pages={1250--1258},
   year={2024},
   organization={Organising Committee of the 11th ECPLF, University of Bologna},
-  orresponding_author = {Mutian Niu}
+  corresponding_author = {Mutian Niu}
+}
+
+@inproceedings{zandona2024development,
+  abbr={ECPLF 2024},
+  title={Development of a tracking-by-classification method for identifying and tracking Holstein cows in a free-stall barn environment},
+  author={Zandona, Boris and Wang, Meiqing and Li, Sumin and Ma, Xiaoqi and R{\"a}is{\"a}nen, Susanna and Serviento, Aira Maye and Zeng, Zhibo and Zhang, Yixin and Zhao, Xinjie and Niu, Mutian},
+  booktitle={Precision Livestock Farming 2024: Papers presented at the 11th European Conference on Precision Livestock Farming},
+  pages={459--466},
+  year={2024},
+  organization={Organising Committee of the 11th ECPLF, University of Bologna},
+  corresponding_author = {Mutian Niu}
 }
