--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,17 @@
 @string{aps = {American Physical Society,}}
 
 
+@article{charisis2025instance,
+  title={Instance segmentation of oyster mushroom datasets: A novel data sampling methodology for training and evaluation of deep learning models},
+  author={Charisis, Christos and Wang, Meiqing and Argyropoulos, Dimitrios},
+  journal={Smart Agricultural Technology},
+  pages={101146},
+  year={2025},
+  publisher={Elsevier},
+  pdf={https://doi.org/10.1016/j.atech.2025.101146},
+  selected=True,
+  corresponding_author={Argyropoulos, Dimitrios}
+}
 
 
 @article{wang2024learning,
