--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,7 @@
 
 
 @article{charisis2025instance,
+  abbr={AgTech},
   title={Instance segmentation of oyster mushroom datasets: A novel data sampling methodology for training and evaluation of deep learning models},
   author={Charisis, Christos and Wang, Meiqing and Argyropoulos, Dimitrios},
   journal={Smart Agricultural Technology},
