--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,19 @@
 @string{aps = {American Physical Society,}}
 
 
+@article{islam2025divergent,
+  abbr={Animal}
+  title={Divergent effects of 3-nitrooxypropanol on enteric methane emissions in Holstein and Brown Swiss cows, and its lack of synergy with acacia tannin extract},
+  author={Islam, Md Zakirul and R{\"a}is{\"a}nen, SE and He, Tengfei and Kunz, C and Li, Yang and Ma, Xiaoqi and Serviento, Aira Maye and Wang, Kai and Wang, Meiqing and Zeng, Zhibo and others},
+  journal={animal},
+  pages={101603},
+  year={2025},
+  publisher={Elsevier},
+  pdf={https://doi.org/10.1016/j.animal.2025.101603},
+  corresponding_author={Mutian Niu}
+}
+
+
 @article{charisis2025instance,
   abbr={AgTech},
   title={Instance segmentation of oyster mushroom datasets: A novel data sampling methodology for training and evaluation of deep learning models},
