--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 
 
 @article{islam2025divergent,
-  abbr={Animal}
+  abbr={Animal},
   title={Divergent effects of 3-nitrooxypropanol on enteric methane emissions in Holstein and Brown Swiss cows, and its lack of synergy with acacia tannin extract},
   author={Islam, Md Zakirul and R{\"a}is{\"a}nen, SE and He, Tengfei and Kunz, C and Li, Yang and Ma, Xiaoqi and Serviento, Aira Maye and Wang, Kai and Wang, Meiqing and Zeng, Zhibo and others},
   journal={animal},
